--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   image_picker: ^1.1.2
+  path_provider: ^2.1.4
   timeago: ^3.2.2
   video_compress: ^3.1.1
   video_player: ^2.4.5
