--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,11 @@ dependencies:
   flutter_screenutil: ^5.9.3
   get: ^4.6.6
   get_storage: ^2.1.1
+  google_fonts: ^6.2.1
   image_picker: ^1.1.2
+  simple_circular_progress_bar: ^1.0.2
   timeago: ^3.2.2
+  url_launcher: ^6.3.0
   video_compress: ^3.1.1
   video_player: ^2.4.5
 
