--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   get_storage: ^2.1.1
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
+  path: ^1.9.0
+  permission_handler: ^11.3.1
   simple_circular_progress_bar: ^1.0.2
   timeago: ^3.2.2
   url_launcher: ^6.3.0
